--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
   </div>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmq2t99GucbbVdSP88q8cHnACsaodxWFs&callback=initMap" async defer></script>
+  <script type="text/javascript" src="ressource/js/jquery.js"></script>
   <script type="text/javascript" src="ressource/js/app.js"></script>
 </body>
 </html>
