--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
       </div>
     </div>
   </header>
-  <div class="container">
-    <div id="map">
+  <section>
+    <div class="container">
+      <div id="map">
+      </div>
     </div>
-  </div>
+  </section>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmq2t99GucbbVdSP88q8cHnACsaodxWFs&callback=initMap" async defer></script>
   <script type="text/javascript" src="ressource/js/jquery.js"></script>
   <script type="text/javascript" src="ressource/js/app.js"></script>
