--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Orbitron:400,500" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="ressource/css/style.css">
   <title>Random Code</title>
 </head>
 <body>
+  <div>
   <header>
     <nav>
       <div class="container navbar">
@@ -31,14 +32,16 @@
       </div>
     </div>
   </header>
+</div>
   <section>
-    <div class="container">
+    <div>
       <div id="map">
       </div>
     </div>
   </section>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmq2t99GucbbVdSP88q8cHnACsaodxWFs&callback=initMap" async defer></script>
   <script type="text/javascript" src="ressource/js/jquery.js"></script>
+  <script type="text/javascript" src="js/parallax.js"></script>
   <script type="text/javascript" src="ressource/js/app.js"></script>
 </body>
 </html>
